// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with onClick 1`] = `
<img
  onClick={[Function]}
  style={
    Object {
      "cursor": "pointer",
      "margin": undefined,
    }
  }
/>
`;

exports[`renders correctly without onClick 1`] = `
<img
  onClick={null}
  style={
    Object {
      "margin": undefined,
    }
  }
/>
`;
